--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "bootstrap": "4.0.0-alpha.6",
     "common-tags": "^1.4.0",
     "compression": "^1.6.2",
     "express": "^4.15.2",
     "immutable": "4.0.0-rc.2",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-helmet": "^5.0.2",
     "react-hot-loader": "next",
+    "react-jss": "^5.4.1",
     "react-redux": "^5.0.3",
     "react-router": "next",
     "react-router-dom": "next",
@@ -33,7 +36,8 @@
     "redux-actions": "^2.0.1",
     "redux-thunk": "^2.2.0",
     "socket.io": "^1.7.3",
-    "socket.io-client": "^1.7.3"
+    "socket.io-client": "^1.7.3",
+    "tether": "^1.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
